<resources>
    <string name="app_name">mawfd</string>
    <string name="FIO">Шаломеенко Андрей Алексеевич</string>
    <string name="title_name">AWFD</string>
    <string name="notification_title">Уведомление о приёме</string>
    <string name="notification_text">Приём был отменён</string>
    <string name="service_button">Перейти в приложение</string>
    <string name="service_text">Приём у врача был отменён. Нажмите, чтобы перейти в приложение.</string>
    <string name="service_creation">Создать сервис</string>
    <string name="entranceButtonText">Войти</string>
    <string name="LoginHint">Логин</string>
    <string name="PasswordHInt">Пароль</string>
    <string name="EntranceData">Введите свои учётные данные ниже:</string>
    <string name="Welcome">Добро пожаловать в систему AWFD!</string>
    <string name="BackToTheMainMenu">Перейти в основное меню</string>
    <string name="AdminEntrance">Вход для администраторов</string>
    <string name="back">Назад</string>
    <string name="doctorslist">Список врачей</string>
    <string name="button_to_share">Button to share</string>
    <string name="showNotification">Отобразить уведомление</string>
    <string name="doctors">Врачи</string>
    <string name="appointments">Приёмы</string>
    <string name="library">Картотека</string>
    <string name="homepage">Главная</string>
    <string name="AddPatient">Добавить пациента</string>
    <string name="AddAppointment">Добавить приём</string>
</resources>