<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_startframe"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.StartFrameFragment">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="306dp"
        android:layout_height="298dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="90dp"
        android:layout_marginEnd="53dp"
        android:layout_marginBottom="503dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/awfd_logo_foreground" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="101dp"
        android:layout_height="45dp"
        android:text="@string/title_name"
        android:textColor="#000000"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="386dp"
        android:layout_height="212dp"
        android:layout_marginBottom="50dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/button3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/showNotification"
            android:textColor="#000000" />

        <Button
            android:id="@+id/button2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/doctorslist"
            android:textColor="#000000" />

        <Button
            android:id="@+id/button4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/service_creation"
            android:textColor="#000000" />

        <TextView
            android:id="@+id/APIView"
            android:layout_width="match_parent"
            android:layout_height="68dp"
            android:fontFamily="@font/aguafina_script"
            android:textAlignment="center"

            android:textColor="@color/teal_700"
            android:textColorHighlight="@color/cyan"
            android:textSize="34sp"
            android:textStyle="bold|italic" />

    </LinearLayout>

    <ImageButton
        android:id="@+id/shareButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@android:drawable/ic_menu_share"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.036"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.0"
        android:contentDescription="@string/button_to_share" />

</androidx.constraintlayout.widget.ConstraintLayout>